config/kubernetes/staging/service.yml
apiVersion: v1
kind: Service
metadata:
  name: request-personal-information-service-staging
  namespace: request-personal-information-staging
  labels:
    app: request-personal-information-web-staging
spec:
  ports:
  - port: 80
    name: http
    targetPort: 3000
  selector:
    app: request-personal-information-web-staging
