config/kubernetes/staging/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: request-personal-information-ingress-staging
  namespace: request-personal-information-staging
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: app-secrets
    external-dns.alpha.kubernetes.io/set-identifier: request-personal-information-ingress-staging-request-personal-information-staging-green
    external-dns.alpha.kubernetes.io/aws-weight: "100"
    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
    nginx.ingress.kubernetes.io/modsecurity-snippet: |
      SecRuleEngine On
      SecDefaultAction "phase:2,pass,log,tag:github_team=central-digital-product-team,tag:namespace=request-personal-information-staging"
spec:
  ingressClassName: modsec
  ingressClassName: default
  tls:
  - hosts:
    - request-personal-information-staging.apps.live.cloud-platform.service.justice.gov.uk
  rules:
  - host: request-personal-information-staging.apps.live.cloud-platform.service.justice.gov.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: request-personal-information-service-staging
            port:
              number: 80
